# cross_platform_utils

./: .gitignore  CMakeLists.txt  README.md  cross_platform_utils.cpp  cross_platform_utils.h  time_span_stats.h
unittest/: CMakeLists.txt  cross_platform_utils_test.cpp
